Fix width overflow at shop page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,7 @@
 	#__next {
 		margin-right: calc(-1 * (100vw - 100%));
 		height: 100vh;
+		width: 100%;
 		@apply pattern;
 	}
 	.pattern {
@@ -24,11 +25,9 @@
 			radial-gradient(#e6516d 1px, #fdddd6 1px);
 		background-size: 40px 40px;
 		background-position: 0 0, 20px 20px;
-	
 	}
 
 	.btn-primary {
-		@apply active:shadow-none active:translate-y-[6px] shadow-[0_6px_#9b283d]  transition-all font-bold flex justify-center items-center my-4 py-2 px-6 box-content rounded-lg bg-accent text-light shrink-0 hover-hover:hover:brightness-110 h-fit w-fit ;
+		@apply active:shadow-none active:translate-y-[6px] shadow-[0_6px_#9b283d]  transition-all font-bold flex justify-center items-center my-4 py-2 px-6 box-content rounded-lg bg-accent text-light shrink-0 hover-hover:hover:brightness-110 h-fit w-fit;
 	}
 }
-
